src/views/CartPage/CartPage.scss
@import "/src/sass/mixins.scss";
@import "/src/sass/variables.scss";
@import "/src/sass/colors.scss";

.cart-page-split {
  display: flex;
  justify-content: center;
  background-color: #eaeded;

  .cart-page {
    display: flex;
    align-items: center;
    flex-direction: column;
    padding: 14px 18px 18px;
    background-color: #eaeded;
    color: $secondary-text-color;

    .cart {
      padding: 20px;
      background-color: #ffffff;

      .shopping-cart {
        h1 {
          font-size: 28px;
          font-weight: normal;
        }

        .price-text {
          display: flex;
          justify-content: flex-end;
          font-size: $font-size-14px;
          color: #565959;
        }

        .cart-product {
          display: flex;
          padding: 30px 0 20px 12px;
          border-top: $tertiary-border-color;

          .cart-product-image {
            height: 180px;
            width: 180px;
            display: flex;
            align-items: center;
            justify-content: center;
            margin-right: 20px;
            cursor: pointer;

            img {
              max-width: 180px;
              max-height: 180px;
              padding: 10px 0;
            }
          }

          .cart-product-info {
            display: flex;
            flex-direction: column;

            .cart-product-title {
              width: 75%;
              font-size: $font-size-18px;
              cursor: pointer;
            }

            .in-stock-text {
              margin-top: 5px;
              font-size: $font-size-14px;
              color: #007600;
            }

            .cart-quantity {
              margin-top: 75px;

              .select-quantity {
                @include selectStyle;
                margin-right: 25px;
              }

              .select-quantity:focus {
                @include selectStyleFocus;
              }

              .delete-cart-product {
                padding: 0 20px;
                border-right: $tertiary-border-color;
                border-left: $tertiary-border-color;
                font-size: $font-size-14px;
                color: $link-text-color;
                cursor: pointer;
              }

              .delete-cart-product:hover {
                @include linkHoverEffect;
              }

              .save-for-later {
                margin-left: 20px;
                font-size: $font-size-14px;
                color: $link-text-color;
                cursor: pointer;
              }

              .save-for-later {
                @include linkHoverEffect;
              }
            }
          }
        }

        .cart-product-subtotal {
          display: flex;
          justify-content: flex-end;
          align-items: center;
          padding-top: 15px;
          border-top: $tertiary-border-color;
          font-size: $font-size-18px;

          h5 {
            margin-left: 8px;
          }
        }
      }
    }

    .save-for-later-list {
      width: 100%;
      padding: 20px 20px 15px 20px;
      margin-top: 20px;
      font-size: $font-size-14px;
      background-color: #ffffff;

      h2 {
        padding-bottom: 20px;
      }

      .saved-items {
        padding-bottom: 10px;
        margin-left: 16px;
        border-bottom: 3px solid #ff780c;
        font-weight: bold;
      }

      .saved-for-later-grid {
        display: grid;
        grid-template-columns: 239px 235px 235px 235px;
        margin-top: 11px;
        border-top: $tertiary-border-color;

        .saved-for-later-product {
          padding: 35px 12px 12px 12px;
          margin-top: 10px;
          border: $tertiary-border-color;

          .saved-for-later-image {
            width: 100px;
            height: 100px;
            border-radius: 3px;
          }

          .saved-for-later-title {
            height: 23px;
            font-size: $font-size-16px;
            text-overflow: ellipsis;
            overflow: hidden;
            white-space: nowrap;
          }

          .saved-for-later-price {
            font-size: $font-size-18px;
          }

          .in-stock {
            margin-top: 5px;
            font-size: $font-size-14px;
            color: #007600;
          }

          .move-to-cart {
            @include selectStyle;
            width: 100%;
            margin-top: 15px;
            background-color: #ffffff;
          }

          .move-to-cart:hover {
            @include whiteButtonHover;
          }

          .saved-for-later-delete,
          .saved-for-later-list {
            margin-top: 5px;
            font-size: $font-size-14px;
            color: $secondary-link-text-color;
            cursor: pointer;
          }

          .saved-for-later-delete:hover {
            color: #e47911;
          }

          .saved-for-later-list:hover {
            color: #e47911;
          }
        }
      }
    }
  }

  .subtotal {
    height: 128px;
    width: 350px;
    display: flex;
    flex-direction: column;
    padding: 20px 20px 15px 20px;
    margin: 14px 20px 0 0;
    font-size: $font-size-14px;
    background-color: #ffffff;

    .subtotal-price {
      display: flex;
      font-size: $font-size-18px;

      h3 {
        margin-left: 8px;
        font-size: $font-size-18px;
      }
    }

    .checkout {
      padding: 11px;
      margin-top: 16px;
      font-size: $font-size-14px;
      border: none;
      border-radius: 8px;
      background-color: $primary-button-color;
      color: #0f1111;
      box-shadow: 0 2px 5px 0 rgba(213, 217, 217, 0.5);
      cursor: pointer;
    }

    .checkout:hover {
      background-color: $primary-button-hover-color;
    }
  }
}

